--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 
+.main-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    width: 98vw;
+  }
 .container{
     display:  grid ;
     grid-template-columns: 1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr 1fr ;
-    width: max(40vw, 300px);
-    height: max(40vw, 300px);
+    width: max(40vw, 400px);
+    height: max(40vw, 400px);
 
 }
 
@@ -39,4 +46,15 @@
     background: none ;
     border: none;
     cursor: pointer;
+  }
+  @media screen and (max-width: 1000px){
+    .container{
+      width: 90vw;
+      height: 90vw;
+    }
+    .btn{
+      width: 20vw;
+      height: 20vw;
+      font-size: 20vw;
+    }
   }
